--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  chierchia2019origins-of-weak,
+  author	= {Chierchia, Gennaro},
+  journal	= {Natural Language Semantics},
+  title		= {Origins of weak crossover: when dynamic semantics meets
+		  event semantics},
+  year		= {2019},
+  doi		= {10.1007/s11050-019-09158-3}
+}
+
 @InCollection{	  partee2008ambiguous-pseud,
   author	= {Partee, Barbara H},
   booktitle	= {Compositionality in {Formal} {Semantics}},
