--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  renans2019definite-descri,
+  author	= {Renans, Agata},
+  journal	= {Linguistics and Philosophy},
+  pages		= {43},
+  title		= {Definite descriptions of events: progressive
+		  interpretation in {Ga} ({Kwa})},
+  year		= {2019}
+}
+
 @Article{	  chierchia2019origins-of-weak,
   author	= {Chierchia, Gennaro},
   journal	= {Natural Language Semantics},
