result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@Article{Camilleri2019The-grammatical,
+author = {Camilleri, Maris and Sadler, Louisa}, 
+title = {The grammaticalisation of a copula in vernacular Arabic}, 
+journal = {Glossa: a journal of general linguistics}, 
+volume = {4}, 
+number = {1}, 
+pages = {137}, 
+year = {2019}, 
+location = {}, 
+keywords = {Arabic; Copular sentences; Stage-level/individual-level predicates; copula}}
+
+
+
 @InBook{Partee1998CopulaInversionPuzzles,
 author = {Partee, Barbara H}, 
 title = {Copula Inversion Puzzles in English and Russian}, 
