--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Article{	  camilleri2019the-grammatical,
+  author	= {Camilleri, Maris and Sadler, Louisa},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {137},
+  title		= {The grammaticalisation of a copula in vernacular
+		  {Arabic}},
+  volume	= {4},
+  year		= {2019},
+  doi		= {10.5334/gjgl.915}
+}
+
 @Article{	  renans2019definite-descri,
   author	= {Renans, Agata},
   journal	= {Linguistics and Philosophy},
