--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  miyagawa2019inducing-and-bl,
+  author	= {Miyagawa, Shigeru and Wu, Danfeng and Koizumi, Masatoshi},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {141},
+  title		= {Inducing and blocking labeling},
+  volume	= {4},
+  year		= {2019},
+  doi		= {10.5334/gjgl.923}
+}
+
 @Article{	  camilleri2019the-grammatical,
   author	= {Camilleri, Maris and Sadler, Louisa},
   journal	= {Glossa: a journal of general linguistics},
