--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Article{	  murphy2020language-design,
+  author	= {Murphy, Elliot},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {2},
+  title		= {Language design and communicative competence: {The}
+		  minimalist perspective},
+  volume	= {5},
+  year		= {2020},
+  doi		= {10.5334/gjgl.1081}
+}
+
 @Article{	  miyagawa2019inducing-and-bl,
   author	= {Miyagawa, Shigeru and Wu, Danfeng and Koizumi, Masatoshi},
   journal	= {Glossa: a journal of general linguistics},
