--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@Article{	  baker2020agree-without-a,
+  author	= {Baker, Mark and Camargo Souza, Livia},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Agree without {Agreement}: {Switch}-reference and
+		  reflexive voice in two {Panoan} languages},
+  year		= {2020},
+  doi		= {10.1007/s11049-019-09463-w}
+}
+
+@Article{	  zaitsu2020modality-force,
+  author	= {Zaitsu, Anissa},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {5},
+  title		= {Modality force and syntax in an understudied class of
+		  reduced why-questions in {English}},
+  volume	= {5},
+  year		= {2020},
+  doi		= {10.5334/gjgl.870}
+}
+
 @Article{	  murphy2020language-design,
   author	= {Murphy, Elliot},
   journal	= {Glossa: a journal of general linguistics},
