--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Unpublished{	  pesetsky2020exfoliation-to,
+  author	= {Pesetsky, David},
+  title		= {Exfoliation: towards a derivational theory of clause
+		  size},
+  year		= {2020}
+}
+
 @Article{	  baker2020agree-without-a,
   author	= {Baker, Mark and Camargo Souza, Livia},
   journal	= {Natural Language \& Linguistic Theory},
