--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Book{		  freidin2012syntax-basic-c,
+  address	= {Cambridge},
+  author	= {Freidin, Robert},
+  publisher	= {Cambridge University Press},
+  title		= {Syntax: {Basic} {Concepts} and {Applications}},
+  year		= {2012},
+  doi		= {10.1017/CBO9781139020565}
+}
+
 @Unpublished{	  pesetsky2020exfoliation-to,
   author	= {Pesetsky, David},
   title		= {Exfoliation: towards a derivational theory of clause
