result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,17 @@
+@Article{Krivochen2019Pasivas-adelant,
+author = {Krivochen, Diego and Bravo, Ana}, 
+title = {Pasivas adelantadas, dobles pasivas y auxiliares de pasiva léxicos}, 
+journal = {Revista Española de Lingü\’istica}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {2019}, 
+abstract = {}, 
+location = {}, 
+keywords = {pasive; auxiliaries; aspect; Spanish; copulative; ser; estar}}
+
+
+
 @Article{Camilleri2019The-grammatical,
 author = {Camilleri, Maris and Sadler, Louisa}, 
 title = {The grammaticalisation of a copula in vernacular Arabic}, 
@@ -1370,7 +1384,7 @@ pages = {},
 year = {2017}, 
 abstract = {Some Spanish constructions with the copula estar plus an adjective, like María está muy guapa (María be-estar.prs.3sgvery pretty), are interpreted systematically, without any particular contextual requirements, as indicating that the predication is based on the speaker’s direct perception. Interestingly, this phenomenon obtains only for a subset of estar+adjective constructions. The aim of this paper is to account for the conditions under which this entailment of direct experience appears. More specifically, I argue that it is the result of an interpretive, inferential solution triggered to solve a feature mismatch between the semantic requirements of the copula estar and the semantic properties of individual-level adjectival predicates. The evidential commitment is added to provide a situational anchor for the estar predication when the adjectival predicate is unbounded. The approach presented here has implications for our view on commitment and evidentiality, and can cast some light on the issue of copula selection in Spanish.}, 
 location = {}, 
-keywords = {Evidentiality, /, Commitment, Direct experience, ILP/SLP, Mismatch}}
+keywords = {Evidentiality, Commitment, Direct experience, ILP/SLP, Mismatch}}
 
 
 @Article{Sanchez-Alonso2017Copula-Distinct,
