--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  krivochen2019pasivas-adelant,
+  author	= {Krivochen, Diego and Bravo, Ana},
+  journal	= {Revista Espa{\~n}ola de Ling{\"u}{\'i}stica},
+  title		= {Pasivas adelantadas, dobles pasivas y auxiliares de pasiva
+		  l{\'e}xicos},
+  year		= {2019},
+  doi		= {10.31810/RSEL.49.4}
+}
+
 @Book{		  freidin2012syntax-basic-c,
   address	= {Cambridge},
   author	= {Freidin, Robert},
