result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,7 +1,7 @@
 @Article{Krivochen2019Pasivas-adelant,
 author = {Krivochen, Diego and Bravo, Ana}, 
 title = {Pasivas adelantadas, dobles pasivas y auxiliares de pasiva léxicos}, 
-journal = {Revista Española de Lingü\’istica}, 
+journal = {Revista Española de Lingüística}, 
 volume = {}, 
 number = {}, 
 pages = {}, 
@@ -1216,7 +1216,7 @@ keywords = {}}
 
 @Book{Falk1979Ser-y-estar-con-atri,
 author = {Falk, Johan}, 
-title = {Ser y estar con atributos adjetivales: anotaciones sobre el empleo de la copula en catalan y en castellano}, 
+title = {Ser y estar con atributos adjetivales: anotaciones sobre el empleo de la copula en catalán y en castellano}, 
 volume = {(29)}, 
 pages = {}, 
 editor = {}, 
@@ -1255,7 +1255,6 @@ school = {},
 address = {}, 
 pages = {}, 
 year = {2014}, 
-abstract = {This paper furthers the discussion of variable agreement in English existential constructions. Previous studies across dialects have shown that there +be with a plural notional post-copular subject is frequently realized with contracted singular agreement, for example, ‹There’s many articles on this topic.' Prior work in building probabilistic models for predicting the presence of agreement or non-agreement in any given such there+be sentential context has investigated a variety of factors with potential influence on this variation, but the present study provides evidence for the inclusion of two novel and significantly predictive elements: a plurality ‹cue distance' and a new taxonomy for determiner type. The latter references each form’s strength in terms of number semantics, rather than along the lines of definiteness employed in traditional determiner classifications. These new factors are, in turn, motivated by a general formulation, the Weak Number Hypothesis, which offers further insight into factor significances found by prior works. Multiple corpus studies and logistic regression model analysis provide empirical support for the central hypothesis and its attendant predictions. Copies of dissertations may be obtained by addressing your request to ProQuest, 789 E. Eisenhower Parkway, P.O. Box 1346, Ann Arbor, MI 48106-1346. Telephone 1-800-521-3042; e-mail: disspub@umi.com}, 
 keywords = {}}
 
 @Article{Zagona2015Comparison-classes-t,
