result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@InBook{Bhat2000Adjective,
+author = {Bhat, D. N. S. and Pustet, Regina}, 
+title = {Adjective}, 
+booktitle = {Handbücher zur Sprach- und Kommunikationswissenschaft = Handbooks of linguistics and communication science}, 
+editor = {Booij, G. E. and Lehmann, Christian and Mugdan, Joachim}, 
+publisher = {De Gruyter Mouton}, 
+address = {Berlin; New York}, 
+pages = {757-769}, 
+year = {2000}, 
+abstract = {}, 
+keywords = {copula; predication; adjective; copulatives; adjetive modification}}
+
+
 @Article{Krivochen2019Pasivas-adelant,
 author = {Krivochen, Diego and Bravo, Ana}, 
 title = {Pasivas adelantadas, dobles pasivas y auxiliares de pasiva léxicos}, 
