--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,84 @@
 
+@Book{		  cristofaro2005subordination,
+  address	= {Oxford ; New York},
+  author	= {Cristofaro, Sonia},
+  publisher	= {Oxford University Press},
+  series	= {Oxford studies in typology and linguistic theory},
+  title		= {Subordination},
+  year		= {2005}
+}
+
+@Book{		  booij2000morphologieinternationaleshandbuch,
+  address	= {Berlin; New York},
+  editor	= {Booij, G. E. and Lehmann, Christian and Mugdan, Joachim},
+  publisher	= {Walter de Gruyter},
+  series	= {Handb{\"u}cher zur {Sprach}- und
+		  {Kommunikationswissenschaft} = {Handbooks} of linguistics
+		  and communication science},
+  title		= {Morphologie: ein internationales {Handbuch} zur {Flexion}
+		  und {Wortbildung}},
+  year		= {2000}
+}
+
+@InCollection{	  bhat2000adjective,
+  address	= {Berlin ; New York},
+  author	= {Bhat, D. N. S. and Pustet, Regina},
+  booktitle	= {Handb{\"u}cher zur {Sprach}- und
+		  {Kommunikationswissenschaft} = {Handbooks} of linguistics
+		  and communication science},
+  editor	= {Booij, G. E. and Lehmann, Christian and Mugdan, Joachim},
+  pages		= {757--769},
+  publisher	= {De Gruyter Mouton},
+  title		= {Adjective},
+  year		= {2000}
+}
+
+@Article{	  urk2020object-licensin,
+  author	= {van Urk, Coppe},
+  booktitle	= {Natural Language \& Linguistic Theory},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {1},
+  pages		= {313--364},
+  title		= {Object licensing in Fijian and the role of adjacency},
+  volume	= {38},
+  year		= {2020},
+  doi		= {10.1007/s11049-019-09442-1}
+}
+
+@Article{	  del-prete2020building-comple,
+  author	= {Del Prete, Fabio and Todaro, Giuseppina},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {1},
+  pages		= {1--41},
+  title		= {Building complex events: The case of Sicilian Doubly
+		  Inflected Construction},
+  volume	= {38},
+  year		= {2020},
+  doi		= {10.1007/s11049-018-09439-2}
+}
+
+@Article{	  hall2020the-impersonal-,
+  author	= {Hall, David},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {1},
+  pages		= {117--150},
+  title		= {The impersonal gets personal},
+  volume	= {38},
+  year		= {2020},
+  doi		= {10.1007/s11049-019-09447-w}
+}
+
+@Book{		  goldinmeadow2003the-resilience,
+  address	= {New York, N.Y},
+  author	= {Goldin-Meadow, Susan},
+  publisher	= {Psychology Press},
+  series	= {Essays in developmental psychology},
+  title		= {The resilience of language: what gesture creation in deaf
+		  children can tell us about how all children learn
+		  language},
+  year		= {2003}
+}
+
 @Article{	  krivochen2019pasivas-adelant,
   author	= {Krivochen, Diego and Bravo, Ana},
   journal	= {Revista Espa{\~n}ola de Ling{\"u}{\'i}stica},
