--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@InCollection{	  bosque2012competencia,
+  address	= {M{\'e}xico},
+  author	= {Bosque, Ignacio},
+  booktitle	= {Filosof{\'i}a del lenguaje {I}. Sem{\'a}ntica},
+  editor	= {Acero, Juan Jos{\'e}},
+  pages		= {27-56},
+  publisher	= {Trotta},
+  title		= {La competencia gramatical},
+  year		= {2012}
+}
+
 @Book{		  cristofaro2005subordination,
   address	= {Oxford ; New York},
   author	= {Cristofaro, Sonia},
