result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,44 @@
+@Article{Moreno-Cabrera1982Atribucion-ecua,
+author = {Moreno-Cabrera, Juan Carlos}, 
+title = {Atribución, ecuación, y especificación: tres aspectos de la semántica de la cópula en español}, 
+journal = {Revista Española de Lingüística}, 
+volume = {12}, 
+number = {2}, 
+pages = {229--246}, 
+year = {1982}, 
+abstract = {}, 
+location = {}, 
+keywords = {predication; Copula Choice; copulative sentences}}
+
+
+
+@InBook{Longobardi1987Copula,
+author = {Longobardi, Giuseppe}, 
+title = {Las oraciones copulativas en la teoría sintáctica actual}, 
+booktitle = {Sintaxis de las lenguas románicas}, 
+editor = {Demonte, Violeta and Lagunilla Fernández, Marina}, 
+publisher = {El Arquero}, 
+address = {Madrid}, 
+pages = {233-251}, 
+year = {1987}, 
+abstract = {}, 
+keywords = {copulative sentences; copula; predication}}
+
+
+@Article{Bosque1991QP-Raising-in-S,
+author = {Bosque, Ignacio and Brucart, José María}, 
+title = {{QP} Raising in Spanish Superlatives}, 
+journal = {Primer Coloquio de Gramática Generativa}, 
+volume = {}, 
+number = {}, 
+pages = {}, 
+year = {1991}, 
+abstract = {}, 
+location = {Universidad Autónoma de Madrid}, 
+keywords = {Superlative quantifiers; Superlative modifiers; predication; copulative}}
+
+
+
 @InBook{Bhat2000Adjective,
 author = {Bhat, D. N. S. and Pustet, Regina}, 
 title = {Adjective}, 
