--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,61 @@
 
+@Article{	  bosque1980sobre-la-prepos,
+  author	= {Bosque, Ignacio},
+  journal	= {Ling{\"u}{\'i}stica Hisp{\'a}nica},
+  pages		= {71--85},
+  title		= {Sobre la preposici{\'o}n sin},
+  volume	= {3},
+  year		= {1980}
+}
+
+@Article{	  moreno-cabrera1982atribucion-ecua,
+  author	= {Moreno-Cabrera, Juan Carlos},
+  journal	= {Revista Espa{\~n}ola de Ling{\"u}{\'i}stica},
+  number	= {2},
+  pages		= {229--246},
+  title		= {Atribuci{\'o}n, ecuaci{\'o}n, y especificaci{\'o}n: tres
+		  aspectos de la sem{\'a}ntica de la c{\'o}pula en espa{\~n}ol},
+  volume	= {12},
+  year		= {1982}
+}
+
+@InBook{	  longobardi1987copula,
+  address	= {Madrid},
+  author	= {Longobardi, Giuseppe},
+  booktitle	= {Sintaxis de las lenguas rom{\'a}nicas},
+  editor	= {Demonte, Violeta and Lagunilla Fern{\'a}ndez, Marina},
+  pages		= {233-251},
+  publisher	= {El Arquero},
+  title		= {Las oraciones copulativas en la teor{\'i}a sint{\'a}ctica
+		  actual},
+  year		= {1987}
+}
+
+@TechReport{	  bosque1991qp-raising-in-s,
+  address	= {Universidad Aut{\'o}noma de Madrid},
+  author	= {Bosque, Ignacio and Brucart, Jos{\'e} Mar{\'i}a},
+  institution	= {Primer Coloquio de Gram{\'a}tica Generativa},
+  title		= {{QP} Raising in Spanish Superlatives},
+  year		= {1991}
+}
+
+@Article{	  bosque1990las-construccio,
+  author	= {Bosque, Ignacio and Moreno-Cabrera, Juan Carlos},
+  journal	= {Ling{\"u}{\'i}stica (Revista de ALFAL)},
+  number	= {1},
+  pages		= {5--50},
+  title		= {Las construcciones con lo y la denotaci{\'o}n del neutro},
+  volume	= {2},
+  year		= {1990}
+}
+
+@Article{	  bosque1984la-seleccion-de,
+  author	= {Bosque, Ignacio},
+  journal	= {Verba: Anuario galego de filoloxia},
+  title		= {La selecci{\'o}n de las palabras interrogativas},
+  year		= {1984}
+}
+
 @InCollection{	  bosque2012competencia,
   address	= {M{\'e}xico},
   author	= {Bosque, Ignacio},
