--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@Book{		  rae-asale2020glosario-de-ter,
+  author	= {{RAE-ASALE}},
+  publisher	= {Ediciones Universidad de Salamanca},
+  title		= {Glosario de T{\'e}rminos Gramaticales},
+  year		= {2020}
+}
+
+@Article{	  rae-asale2020informe-de-la-r,
+  author	= {{RAE-ASALE}},
+  journal	= {Bolet{\'i}n de Informaci{\'o}n Ling{\"u}{\'i}stica de la
+		  Real Academia Espa{\~n}ola},
+  number	= {0},
+  pages		= {5--207},
+  title		= {{INFORME} {DE} {LA} {REAL} {ACADEMIA} {ESPA{\~N}OLA} sobre
+		  el uso del lenguaje inclusivo en la {Constituci{\'o}n}
+		  {Espa{\~n}ola}, elaborado a petici{\'o}n de la
+		  {Vicepresidenta} del {Gobierno}},
+  volume	= {14},
+  year		= {2020}
+}
+
 @Article{	  bosque1980sobre-la-prepos,
   author	= {Bosque, Ignacio},
   journal	= {Ling{\"u}{\'i}stica Hisp{\'a}nica},
