--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,26 @@
 
+@Article{	  rooij2020generics-and-ty,
+  author	= {van Rooij, Robert and Schulz, Katrin},
+  journal	= {Linguistics and Philosophy},
+  number	= {1},
+  pages		= {83--117},
+  title		= {Generics and typicality: a bounded rationality approach},
+  volume	= {43},
+  year		= {2020},
+  doi		= {10.1007/s10988-019-09265-8}
+}
+
+@Article{	  beck2020readingsscalarparticles,
+  author	= {Beck, Sigrid},
+  journal	= {Linguistics and Philosophy},
+  number	= {1},
+  pages		= {1--67},
+  title		= {Readings of scalar particles: noch/still},
+  volume	= {43},
+  year		= {2020},
+  doi		= {10.1007/s10988-018-09256-1}
+}
+
 @Book{		  rae-asale2020glosario-de-ter,
   author	= {{RAE-ASALE}},
   publisher	= {Ediciones Universidad de Salamanca},
