result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,40 @@
+@phdthesis{Nishiyama1998The-morphosynta,
+author = {Nishiyama, Kunio}, 
+title = {The morphosyntax and morphophonology of Japanese predicates}, 
+school = {Cornell University}, 
+address = {}, 
+pages = {}, 
+year = {1998}, 
+keywords = {copula; Copular sentences; predicate; predication}}
+
+
+
+@phdthesis{Sumangala1992Long-distance-d,
+author = {Sumangala, Lelwala}, 
+title = {Long-distance dependencies in Sinhala: The syntax of focus and Wh questions}, 
+school = {Cornell University}, 
+address = {}, 
+pages = {}, 
+year = {1992}, 
+abstract = {}, 
+keywords = {Copula; Copular sentences; Focus; Interrogative clauses; interrogative particles}}
+
+
+
+@Article{Chierchia1985Formal-Semantic,
+author = {Chierchia, Gennaro}, 
+title = {Formal Semantics and the Grammar of Predication}, 
+journal = {Linguistic Inquiry}, 
+volume = {16}, 
+number = {3}, 
+pages = {417--443}, 
+year = {1985}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; Copular sentences; predication}}
+
+
+
 @Article{Moreno-Cabrera1982Atribucion-ecua,
 author = {Moreno-Cabrera, Juan Carlos}, 
 title = {Atribución, ecuación, y especificación: tres aspectos de la semántica de la cópula en español}, 
