--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,32 @@
 
+@PhDThesis{	  sumangala1992long-distance-d,
+  author	= {Sumangala, Lelwala},
+  school	= {Cornell University},
+  type		= {Ph.{D}.},
+  title		= {Long-distance dependencies in {Sinhala}: {The} syntax of
+		  focus and {Wh} questions},
+  year		= {1992}
+}
+
+@PhDThesis{	  nishiyama1998the-morphosynta,
+  author	= {Nishiyama, Kunio},
+  school	= {Cornell University},
+  type		= {Ph.{D}.},
+  title		= {The morphosyntax and morphophonology of {Japanese}
+		  predicates},
+  year		= {1998}
+}
+
+@Article{	  chierchia1985formal-semantic,
+  author	= {Chierchia, Gennaro},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {417--443},
+  title		= {Formal {Semantics} and the {Grammar} of {Predication}},
+  volume	= {16},
+  year		= {1985}
+}
+
 @Article{	  rooij2020generics-and-ty,
   author	= {van Rooij, Robert and Schulz, Katrin},
   journal	= {Linguistics and Philosophy},
