result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,88 @@
+@InBook{Matushansky2005Going-through-a,
+author = {Matushansky, Ora}, 
+title = {Going through a Phase}, 
+booktitle = {Perspectives on Phases}, 
+editor = {McGinnis, Martha and Richards, Norvin}, 
+publisher = {MIT Working Papers in Linguistics}, 
+address = {}, 
+pages = {157-181}, 
+year = {2005}, 
+abstract = {}, 
+keywords = {phase; predication; copulative sentences}}
+
+
+@Article{Matushansky2007Predication-and,
+author = {Matushansky, Ora}, 
+title = {Predication and escape hatches in Phase Extension Theory}, 
+journal = {Theoretical Linguistics}, 
+volume = {33}, 
+number = {1}, 
+pages = {}, 
+year = {2007}, 
+abstract = {}, 
+location = {}, 
+keywords = {copulative sentences; predication; secondary predication; phase; small clauses}}
+
+
+
+
+@Article{Dikken2007Phase-Extension-reply,
+author = {Dikken, Marcel den}, 
+title = {Phase Extension: A reply}, 
+journal = {Theoretical Linguistics}, 
+volume = {33}, 
+number = {1}, 
+pages = {}, 
+year = {2007}, 
+abstract = {}, 
+location = {}, 
+keywords = {predication; secondary predication; copulative sentences; Phase Theory}}
+
+
+
+
+@Article{Dikken2007Phase-Extension,
+author = {Dikken, Marcel den}, 
+title = {Phase Extension Contours of a theory of the role of head movement in phrasal extraction}, 
+journal = {Theoretical Linguistics}, 
+volume = {33}, 
+number = {1}, 
+pages = {1--41}, 
+year = {2007}, 
+abstract = {}, 
+location = {}, 
+keywords = {copula; copulative sentences; predicate inversion; predication; phase}}
+
+
+
+@Article{Koizumi1994Secondary-predi,
+author = {Koizumi, Masatoshi}, 
+title = {Secondary predicates}, 
+journal = {Journal of East Asian Linguistics}, 
+volume = {3}, 
+number = {1}, 
+pages = {25--79}, 
+year = {1994}, 
+abstract = {One problem in linguistic theory concerns the way in which a predication relation between a predicate and its subject (antecedent) is formally licensed by the grammar. The aims of this paper are: (i) to describe in detail the syntactic relationships between secondary predicates and their subjects (antecedents) in Japanese, a language that has not been previously studied from this point of view, and (ii) to propose, based on empirical evidence from Japanese, a new UG principle that governs predication relations in natural languages.}, 
+location = {}, 
+keywords = {subject; predicate; predication; copula; copulative sentences; japanese}}
+
+
+
+@Article{Ko2011Predication-and-edge,
+author = {Ko, Heejeong}, 
+title = {Predication and edge effects}, 
+journal = {Natural Language \& Linguistic Theory}, 
+volume = {29}, 
+number = {3}, 
+pages = {725--778}, 
+year = {2011}, 
+abstract = {}, 
+location = {}, 
+keywords = {Cyclicity; linearization; small clauses; predication; secondary predicates; floating quantifiers; copula; copulatives}}
+
+
+
 @phdthesis{Nishiyama1998The-morphosynta,
 author = {Nishiyama, Kunio}, 
 title = {The morphosyntax and morphophonology of Japanese predicates}, 
