--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,68 @@
 
+@InCollection{	  matushansky2005going-through-a,
+  author	= {Matushansky, Ora},
+  booktitle	= {Perspectives on Phases},
+  editor	= {McGinnis, Martha and Richards, Norvin},
+  publisher	= {MIT Working Papers in Linguistics},
+  series	= {{MIT} {Working} {Papers} in {Linguistics}},
+  title		= {Going through a {P}hase},
+  volume	= {49},
+  year		= {2005}
+}
+
+@Book{		  mcginnis2005perspectivesphases,
+  address	= {Cambridge, Mass},
+  editor	= {McGinnis, Martha and Richards, Norvin},
+  publisher	= {MIT Working Papers in Linguistics},
+  series	= {{MIT} {Working} {Papers} in {Linguistics}},
+  title		= {Perspectives on {Phases}},
+  year		= {2005}
+}
+
+@Article{	  dikken2007phase-extension,
+  author	= {Dikken, Marcel den},
+  journal	= {Theoretical Linguistics},
+  number	= {1},
+  pages		= {1--41},
+  title		= {Phase {Extension} {Contours} of a theory of the role of
+		  head movement in phrasal extraction},
+  volume	= {33},
+  year		= {2007},
+  doi		= {10.1515/TL.2007.001}
+}
+
+@Article{	  matushansky2007predication-and,
+  author	= {Matushansky, Ora},
+  journal	= {Theoretical Linguistics},
+  number	= {1},
+  title		= {Predication and escape hatches in {Phase} {Extension}
+		  {Theory}},
+  volume	= {33},
+  year		= {2007},
+  doi		= {10.1515/TL.2007.007}
+}
+
+@Article{	  dikken2007phase-extension-reply,
+  author	= {Dikken, Marcel den},
+  journal	= {Theoretical Linguistics},
+  number	= {1},
+  title		= {Phase {Extension}: {A} reply},
+  volume	= {33},
+  year		= {2007},
+  doi		= {10.1515/TL.2007.010}
+}
+
+@Article{	  koizumi1994secondary-predi,
+  author	= {Koizumi, Masatoshi},
+  journal	= {Journal of East Asian Linguistics},
+  number	= {1},
+  pages		= {25--79},
+  title		= {Secondary predicates},
+  volume	= {3},
+  year		= {1994},
+  doi		= {10.1007/BF01733149}
+}
+
 @PhDThesis{	  sumangala1992long-distance-d,
   author	= {Sumangala, Lelwala},
   school	= {Cornell University},
