--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  maldonado2020plural-marking,
+  author	= {Maldonado, Mora},
+  journal	= {Journal of Semantics},
+  title		= {Plural {Marking} and d-{Linking} in {Spanish}
+		  {Interrogatives}},
+  year		= {2020},
+  doi		= {10.1093/jos/ffz024}
+}
+
 @InCollection{	  matushansky2005going-through-a,
   author	= {Matushansky, Ora},
   booktitle	= {Perspectives on Phases},
