result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,13 @@
+@phdthesis{Heller2005Identity-and-in,
+author = {Heller, Daphna}, 
+title = {Identity and information: Semantic and pragmatic aspects of specificational sentences}, 
+school = {Rutgers, The State University of New Jersey}, 
+address = {New Brunswick}, 
+pages = {}, 
+year = {2005}, 
+keywords = {Copula; Specificational sentences; Identity; copulative sentences}}
+
+
 @InBook{Matushansky2005Going-through-a,
 author = {Matushansky, Ora}, 
 title = {Going through a Phase}, 
