--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@PhDThesis{	  heller2005identity-and-in,
+  address	= {New Brunswick},
+  author	= {Heller, Daphna},
+  school	= {Rutgers, The State University of New Jersey},
+  type		= {Ph.{D}.},
+  title		= {Identity and information: {Semantic} and pragmatic aspects
+		  of specificational sentences},
+  year		= {2005}
+}
+
 @Article{	  maldonado2020plural-marking,
   author	= {Maldonado, Mora},
   journal	= {Journal of Semantics},
