--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  fara2015namesarepredicates,
+  author	= {Fara, Delia Graff},
+  journal	= {The Philosophical Review},
+  number	= {1},
+  pages		= {59--117},
+  title		= {Names {Are} {Predicates}},
+  volume	= {124},
+  year		= {2015},
+  doi		= {10.1215/00318108-2812660}
+}
+
 @PhDThesis{	  heller2005identity-and-in,
   address	= {New Brunswick},
   author	= {Heller, Daphna},
