result-reduced copulative

--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@Article{	  roberts1988predicativeaps,
+  author	= {Roberts, Ian},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {703--710},
+  title		= {Predicative {APs}},
+  volume	= {19},
+  year		= {1988}
+}
+
+@Article{	  bennis1997predication-in-,
+  author	= {Bennis, Hans and Corver, Norbert and den Dikken, Marcel},
+  journal	= {Journal of Comparative Germanic Linguistics},
+  number	= {2},
+  pages		= {85},
+  title		= {Predication in nominal phrases},
+  volume	= {1},
+  year		= {1997},
+  doi		= {10.1023/A:1009780124314}
+}
+
+@PhDThesis{	  rothstein1983the-syntactic-f,
+  author	= {Rothstein, Susan Deborah},
+  school	= {Massachusetts Institute of Technology},
+  type		= {Thesis},
+  title		= {The syntactic forms of predication},
+  year		= {1983}
+}
+
 @Article{	  fara2015namesarepredicates,
   author	= {Fara, Delia Graff},
   journal	= {The Philosophical Review},
