--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,37 @@
+@Article{Roberts1988PredicativeAPs,
+author = {Roberts, Ian}, 
+title = {Predicative {AP}s}, 
+journal = {Linguistic Inquiry}, 
+volume = {19}, 
+number = {4}, 
+pages = {703--710}, 
+year = {1988}, 
+keywords = {predication; Small Clause; predicate noun; copulative}}
+
+
+
+@Article{Bennis1997Predication-in-,
+author = {Bennis, Hans and Corver, Norbert and den Dikken, Marcel}, 
+title = {Predication in nominal phrases}, 
+journal = {Journal of Comparative Germanic Linguistics}, 
+volume = {1}, 
+number = {2}, 
+pages = {85}, 
+year = {1997}, 
+keywords = {predication; Small clauses; nominal predicates}}
+
+
+
+@phdthesis{Rothstein1983The-syntactic-f,
+author = {Rothstein, Susan}, 
+title = {The syntactic forms of predication}, 
+school = {Massachusetts Institute of Technology}, 
+address = {}, 
+pages = {}, 
+year = {1983}, 
+keywords = {predication; copulative sentences; Small clauses}}
+
+
 @phdthesis{Heller2005Identity-and-in,
 author = {Heller, Daphna}, 
 title = {Identity and information: Semantic and pragmatic aspects of specificational sentences}, 
