--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,36 @@
 
+@PhDThesis{	  nissenbaum2000investigations,
+  author	= {Nissenbaum, Jonathan W.},
+  school	= {Massachusetts Institute of Technology},
+  type		= {Thesis},
+  title		= {Investigations of covert phrase movement},
+  year		= {2000}
+}
+
+@Article{	  del-pinal2019the-logicality,
+  author	= {Del Pinal, Guillermo},
+  journal	= {No{\^u}s},
+  number	= {4},
+  pages		= {785--818},
+  title		= {The {Logicality} of {Language}: {A} new take on
+		  {Triviality}, ``{Ungrammaticality}'', and {Logical}
+		  {Form}*},
+  volume	= {53},
+  year		= {2019},
+  doi		= {10.1111/nous.12235}
+}
+
+@Article{	  marantz2005generative-ling,
+  author	= {Marantz, Alec},
+  journal	= {The Linguistic Review},
+  number	= {2-4},
+  title		= {Generative linguistics within the cognitive neuroscience
+		  of language},
+  volume	= {22},
+  year		= {2005},
+  doi		= {10.1515/tlir.2005.22.2-4.429}
+}
+
 @Article{	  roberts1988predicativeaps,
   author	= {Roberts, Ian},
   journal	= {Linguistic Inquiry},
@@ -6655,17 +6687,6 @@
   publisher	= {Cascadilla Proceedings Project},
   title		= {A New Semantics for Group Nouns},
   year		= {2011}
-}
-
-@Article{	  barwise1981generalized-quantifi,
-  author	= {Barwise, J. and Cooper, R.},
-  journal	= {Linguistics and Philosophy},
-  number	= {2},
-  pages		= {159--219},
-  title		= {Generalized Quantifiers and Natural-Language},
-  volume	= {4},
-  year		= {1981},
-  doi		= {10.1007/BF00350139}
 }
 
 @Article{	  barker1992group-terms-in-engli,
@@ -44890,17 +44911,6 @@
   volume	= {22},
   year		= {1998},
   doi		= {10.1207/s15516709cog2204_1}
-}
-
-@Article{	  marantz2005generative-ling,
-  author	= {Marantz, Alec},
-  journal	= {The Linguistic Review},
-  number	= {2-4},
-  title		= {Generative linguistics within the cognitive neuroscience
-		  of language},
-  volume	= {22},
-  year		= {2005},
-  doi		= {10.1515/tlir.2005.22.2-4.429}
 }
 
 @Article{	  speas2004evidentiality-l,
