--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,16 @@
 
+@Article{	  suarez-palma2020applied-argumen,
+  author	= {Suarez-Palma, Imanol},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {9},
+  title		= {Applied arguments in {Spanish} inchoative middle
+		  constructions},
+  volume	= {5},
+  year		= {2020},
+  doi		= {10.5334/gjgl.827}
+}
+
 @PhDThesis{	  nissenbaum2000investigations,
   author	= {Nissenbaum, Jonathan W.},
   school	= {Massachusetts Institute of Technology},
