result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,31 @@
+@Article{Bowers2002Transitivity,
+author = {Bowers, John}, 
+title = {Transitivity}, 
+journal = {Linguistic Inquiry}, 
+volume = {33}, 
+number = {2}, 
+pages = {183--224}, 
+year = {2002}, 
+abstract = {}, 
+location = {}, 
+keywords = {Transitivity; Predication; Predicates}}
+
+
+
+@Article{Carrier1992The-Argument-St,
+author = {Carrier, Jill and Randall, Janet H.}, 
+title = {The Argument Structure and Syntactic Structure of Resultatives}, 
+journal = {Linguistic Inquiry}, 
+volume = {23}, 
+number = {2}, 
+pages = {173--234}, 
+year = {1992}, 
+abstract = {}, 
+location = {}, 
+keywords = {Adjectives; predication; transitivity}}
+
+
+
 @Article{Roberts1988PredicativeAPs,
 author = {Roberts, Ian}, 
 title = {Predicative {AP}s}, 
