--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,45 @@
 
+@Article{	  carrier1992the-argument-st,
+  author	= {Carrier, Jill and Randall, Janet H.},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {173--234},
+  title		= {The {Argument} {Structure} and {Syntactic} {Structure} of
+		  {Resultatives}},
+  volume	= {23},
+  year		= {1992}
+}
+
+@Article{	  brocker2020justifying-the,
+  author	= {Br{\o}cker, Karen},
+  journal	= {Synthese},
+  title		= {Justifying the evidential use of linguistic intuitions},
+  year		= {2020},
+  doi		= {10.1007/s11229-020-02563-w}
+}
+
+@Article{	  gillon1990ambiguity-gener,
+  author	= {Gillon, Brendan S.},
+  journal	= {Synthese},
+  number	= {3},
+  pages		= {391--416},
+  title		= {Ambiguity, generality, and indeterminacy: {Tests} and
+		  definitions},
+  volume	= {85},
+  year		= {1990},
+  doi		= {10.1007/BF00484835}
+}
+
+@Book{		  heim1998semantics-in-ge,
+  address	= {Malden, MA},
+  author	= {Heim, Irene and Kratzer, Angelika},
+  number	= {13},
+  publisher	= {Blackwell},
+  series	= {Blackwell textbooks in linguistics},
+  title		= {Semantics in generative grammar},
+  year		= {1998}
+}
+
 @Article{	  suarez-palma2020applied-argumen,
   author	= {Suarez-Palma, Imanol},
   journal	= {Glossa: a journal of general linguistics},
