result-reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,16 @@
+@InBook{Demonte2019Dispositional-E,
+author = {Demonte, Violeta}, 
+title = {Dispositional Evaluative Adjectives: Lexical Alternations, Behaviors, and Sideward Movement}, 
+booktitle = {Exploring Interfaces}, 
+editor = {Cabrera, Mónica and Camacho, José}, 
+publisher = {Cambridge University Press}, 
+address = {}, 
+pages = {31-62}, 
+year = {2019}, 
+abstract = {}, 
+keywords = {Copula; Evaluative; Dispositional sentences; Predication}}
+
+
 @Article{Bowers2002Transitivity,
 author = {Bowers, John}, 
 title = {Transitivity}, 
