--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,19 @@
 
+@Book{		  roeper2014recursion,
+  editor	= {Roeper, Tom and Speas, Margaret},
+  publisher	= {Springer International Publishing},
+  title		= {Recursion: Complexity in Cognition},
+  year		= {2014}
+}
+
+@Article{	  jacobson2020neg-raising-and,
+  author	= {Jacobson, Pauline},
+  journal	= {Natural Language Semantics},
+  title		= {Neg Raising and ellipsis (and related issues) revisited},
+  year		= {2020},
+  doi		= {10.1007/s11050-020-09161-z}
+}
+
 @Article{	  carrier1992the-argument-st,
   author	= {Carrier, Jill and Randall, Janet H.},
   journal	= {Linguistic Inquiry},
