--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,26 @@
 
+@Book{		  parsons1990events-in-the-s,
+  address	= {Cambridge, Mass},
+  author	= {Parsons, Terence},
+  number	= {19},
+  publisher	= {MIT Press},
+  series	= {Current studies in linguistics series},
+  title		= {Events in the semantics of {English}: a study in subatomic
+		  semantics},
+  year		= {1990}
+}
+
+@Article{	  cinque1990ergative-adject,
+  author	= {Cinque, Guglielmo},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {1},
+  pages		= {1--39},
+  title		= {Ergative adjectives and the {Lexicalist} {Hypothesis}},
+  volume	= {8},
+  year		= {1990},
+  doi		= {10.1007/BF00205530}
+}
+
 @Book{		  roeper2014recursion,
   editor	= {Roeper, Tom and Speas, Margaret},
   publisher	= {Springer International Publishing},
