--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  rizzi2016labeling-maxima,
+  author	= {Rizzi, Luigi},
+  journal	= {The Linguistic Review},
+  number	= {1},
+  title		= {Labeling, maximality and the head -- phrase distinction},
+  volume	= {33},
+  year		= {2016},
+  doi		= {10.1515/tlr-2015-0016}
+}
+
 @Book{		  parsons1990events-in-the-s,
   address	= {Cambridge, Mass},
   author	= {Parsons, Terence},
