--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,40 @@
 
+@Article{	  bruening2020the-head-of-the,
+  author	= {Bruening, Benjamin},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {15},
+  title		= {The head of the nominal is {N}, {Not} {D}: {N}-to-{D}
+		  {Movement}, {Hybrid} {Agreement}, and conventionalized
+		  expressions},
+  volume	= {5},
+  year		= {2020},
+  doi		= {10.5334/gjgl.1031}
+}
+
+@Article{	  ramchand2018alternating-adj,
+  author	= {Ramchand, Gillian},
+  journal	= {The Linguistic Review},
+  number	= {2},
+  pages		= {283--306},
+  title		= {Alternating adjectives},
+  volume	= {35},
+  year		= {2018},
+  doi		= {10.1515/tlr-2017-0023}
+}
+
+@Article{	  sigurdsson2020we-olaf,
+  author	= {Sigurðsson, Halld{\'o}r {\'A}rmann and Wood, Jim},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  pages		= {16},
+  title		= {``{We} {Olaf}'': {Pro}[(x-){NP}] constructions in
+		  {Icelandic} and beyond},
+  volume	= {5},
+  year		= {2020},
+  doi		= {10.5334/gjgl.1054}
+}
+
 @Article{	  rizzi2016labeling-maxima,
   author	= {Rizzi, Luigi},
   journal	= {The Linguistic Review},
