--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,21 @@
+@phdthesis{Meltzer-Asscher2011Adjectives-and-Argum,
+title={Adjectives and Argument Structure},
+school={Tel Aviv University},
+author={Meltzer-Asscher, Aya},
+year={2011}}
+
+
+@Article{Ramchand2018Alternating-adj, 
+title={Alternating adjectives}, 
+volume={35},  
+DOI={10.1515/tlr-2017-0023}, 
+number={2}, 
+journal={The Linguistic Review}, 
+author={Ramchand, Gillian}, 
+year={2018}, 
+pages={283–306}}
+
+
 @InBook{Demonte2019Dispositional-E,
 author = {Demonte, Violeta}, 
 title = {Dispositional Evaluative Adjectives: Lexical Alternations, Behaviors, and Sideward Movement}, 
