result reduced copulative

--- a/copulative.bib
+++ b/copulative.bib
@@ -1,3 +1,11 @@
+@phdthesis{,
+author = {Faraci, Robert A.}, 
+title = {Aspects of the grammar of infinitives and for-phrases}, 
+school = {MIT}, 
+address = {Cambridge, MA}, 
+year = {1974}}
+
+
 @phdthesis{Meltzer-Asscher2011Adjectives-and-Argum,
 title={Adjectives and Argument Structure},
 school={Tel Aviv University},
