--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  brekke1988the-experiencer,
+  author	= {Brekke, Magnar},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {169--180},
+  title		= {The {Experiencer} {Constraint}},
+  volume	= {19},
+  year		= {1988}
+}
+
 @Article{	  bruening2020the-head-of-the,
   author	= {Bruening, Benjamin},
   journal	= {Glossa: a journal of general linguistics},
