--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@PhDThesis{	  stowell1981originsphrasestructure,
+  author	= {Stowell, Timothy Angus},
+  school	= {Massachusetts Institute of Technology},
+  type		= {Thesis},
+  title		= {Origins of phrase structure},
+  year		= {1981}
+}
+
 @Article{	  brekke1988the-experiencer,
   author	= {Brekke, Magnar},
   journal	= {Linguistic Inquiry},
